# fsdc-api

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  docker-compose-prod.yml  docker-compose.yml  entrypoint.sh  env.py  pyproject.toml  requirements.txt
.github/: docker-build-prod.yml
.github/workflows/: docker-build-prod.yml  docker-build-stage.yml  main.yml
alembic/: env.py
alembic/versions/: 0b7a096c55fb_added_keyword_fields.py  75253c59959d_add_new_fields_for_eggplant_data.py  cd1ed2244844_initial_schema.py  d86c516868cf_initial_schema.py
src/: main.py  models.py
src/core/: db.py  file_manager.py
src/research_bank/: researchers.py  subdisciplines.py
src/routers/: data.py  files.py  graphs.py
src/routers/research_bank/: codebooks.py  datasets.py  research_entries.py  researchers.py  subdisciplines.py
