[project]
name = "fsdc-api"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "altair[all]>=5.5.0",
  "duckdb>=1.2.0",
  "fastapi[standard]>=0.115.8",
  "ibis-framework[duckdb,geospatial]>=10.0.0",
  "requests>=2.32.3",
  "chardet>=5.2.0",
  "fastexcel>=0.12.1",
  "ibis-framework[duckdb,geospatial,sqlite]>=9.0.0",
  "openpyxl>=3.1.5",
  "pandas>=2.2.3",
  "polars>=1.22.0",
  "requests>=2.32.3",
  "sqlmodel>=0.0.22",
  "tqdm>=4.67.1",
  "comtradeapicall>=1.2.1",
  "pysal>=25.1",
]
